...

class _MainNavigationState extends State<MainNavigation> {
  int _index = 0;
  final CartService _cart = CartService();

  static final _navItems = [
    PabNavBarItem(icon: Icons.home, label: 'Inicio'),
    PabNavBarItem(icon: Icons.category, label: 'Catálogo'),
    PabNavBarItem(icon: Icons.search, label: 'Buscar'),
    PabNavBarItem(icon: Icons.shopping_cart, label: 'Carrito'),
    PabNavBarItem(icon: Icons.person, label: 'Perfil'),
  ];

...
